@@ -81,11 +81,11 @@
     <p>
     <h3>Envelopes and LFOs</h3>
     <div class="tab">
-    Once again we have all the standard inserts. There are also the local controls found in AddSynth abd SubSynth. None of these affect the wavetable itself, so there is no need for the apply button here.
+    Once again we have all the standard inserts. There are also the local controls found in AddSynth and SubSynth. None of these affect the wavetable itself, so there is no need for the apply button here.
     </div>
     </p>
     <p>
-    The <b>Export</b> button that appears at the bottom of both of these views take you to a filer window for exporting the complete wavetable with the total number of samples you have currently set. These don't include the controls in the envelopes window.
+    The <b>Export</b> button that appears at the bottom of both of these views takes you to a filer window for exporting a complete wavetable with the total number of samples you have currently set. These don't include any changes in the sound produced by controls in the envelopes window.
     </p>
     <a href="../effects/effects.html">Next</a> Effects
   </body>
