@@ -15,7 +15,35 @@
     This waveform editor is used for both AddSynth and PadSynth.
     </p>
     <p>
+    At the top there are a pair of graphic views. On the left is the complete oscillator with all filters and harmonic effects applied, and on the right the basic wave it is derived from.
+    <br><br>
+    The narrow image is the harmonic distribution. Each vertical bar represents one actual harmonic. This is most obvious with a sinewave base.
+    <br><br>
+    The larger image below is a more familiar waveform as would be displayed on an oscilloscope.
+    <br><br>
     Note: PadSynth doesn't have the <em>Phase or Harmonic Randomness</em> controls. Instead it has the <em>Apply</em> button.
+    <h3>Controls</h3>
+    <b>Mag. Type</b> (Magnification Type) This controls the amount of effect the harmonic sliders have on the waveform. Higher negative values giving less range but finer control.
+    <br><br>
+    <b></b>
+    <br><br>
+    <b></b>
+    <br><br>
+    <b></b>
+    <br><br>
+    <b></b>
+    <br><br>
+    <b></b>
+    <br><br>
+    <b></b>
+    <br><br>
+    <b></b>
+    <br><br>
+    <b></b>
+    <br><br>
+    <b></b>
+    <br><br>
+    <b></b>
     <br><br>
     The bank of sliders controls 128 individual harmonics. The top row being amplitude, and the bottm row, relative phase.
     </p>
