@@ -1,5 +1,9 @@
 yoshimi 2.0.1 M
 
+2021-5-15 Will
+* Bugfix: GUI 1st slider wrong on waveform clear.
+* Further work on User Guide waveform.
+
 2021-5-13 Will
 * Sub/Pad overtone par2 disabled if position is Shift.
   Avoids user confusion. The control not used here.
